--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </form>
       </div>
       <div class="table">
-        <table>
+        <table class="responsive-table">
           <thead>
             <tr>
                 <th>Name</th>
